test/files/neg/string-context-refchecked.check
string-context-refchecked.scala:3: error: overriding final def foo: Int (defined in class C);
 def foo: Int cannot override final member
  s"foo${class D extends C { def foo = 2 }; new D}bar"
                                 ^
one error found
